--- a/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
+++ b/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
@@ -1,4 +1,10 @@
-<input type="text" [(ngModel)]="name">
+<!-- <input type="text" [(ngModel)]="name">
 <button (click)="greet()">greet</button>
 <br>
-<label> {{greeting}} </label>
+<label> {{greeting}} </label> -->
+
+
+<input type="text" [(ngModel)]="description">
+<button (click)="greet()">greet</button>
+<br>
+<label> {{greeting}} </label> 
