[Frontend] feat:  can open static page shows empty table

--- a/ExpenseRecord/ClientApp/src/app/expense-record/expense-record.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense-record/expense-record.component.html
@@ -9,7 +9,7 @@
         
     </div>
     <div class="tool-bar-head">
-        <h1>TODO LIST</h1>
+        <h1>Daily Expense Record</h1>
     </div>
     
 </div>
