--- a/ExpenseRecord/Pages/_ViewImports.cshtml
+++ b/ExpenseRecord/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ExpenseRecord
-@namespace ExpenseRecord.Pages
+﻿@using ExpenseRecords
+@namespace ExpenseRecords.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
