--- a/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
+++ b/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
@@ -1,10 +1,21 @@
-<!-- <input type="text" [(ngModel)]="name">
-<button (click)="greet()">greet</button>
-<br>
-<label> {{greeting}} </label> -->
-
-
-<input type="text" [(ngModel)]="description">
-<button (click)="greet()">greet</button>
-<br>
-<label> {{greeting}} </label> 
+<!-- src/app/app.component.html -->
+<div>
+    <h2>Add Expense</h2>
+    <div>
+      <input [(ngModel)]="newExpense.description" placeholder="Description" />
+      <input [(ngModel)]="newExpense.type" placeholder="Type" />
+      <input [(ngModel)]="newExpense.amount" placeholder="Amount" type="number" />
+      <input [(ngModel)]="newExpense.date" placeholder="Date (YYYYMMDD)" />
+      <button (click)="addExpense()">Add</button>
+    </div>
+  
+    <h2>Expenses</h2>
+    <a>Description - type - amount - date</a>
+    <ul>
+      <li *ngFor="let expense of expenses; let i = index">
+        {{ expense.description }}   {{ expense.type }}   {{ expense.amount }}   {{ expense.date }}
+        <button (click)="deleteExpense(i)">Delete</button>
+      </li>
+    </ul>
+  </div>
+  
