--- a/ExpenseRecord/ClientApp/src/app/app.component.html
+++ b/ExpenseRecord/ClientApp/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-greeting></app-greeting>
+<app-expense-creation></app-expense-creation>
+<!--<app-expense-display></app-expense-display>-->
+
+
