--- a/ExpenseRecord/ClientApp/src/app/expense-record/expense-record.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense-record/expense-record.component.html
@@ -1,5 +1,5 @@
 <div class = "tool-bar">
-    <div>
+    <!-- <div>
         <button class= "list-button" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
@@ -7,7 +7,7 @@
         </button>
 
         
-    </div>
+    </div> -->
     <div class="tool-bar-head">
         <h1>Daily Expense Record</h1>
     </div>
