--- a/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
+++ b/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
@@ -2,9 +2,9 @@
     
     <input type="text" name="description" [(ngModel)]="description" placeholder="Add description...">
     <input type="text" name="kind" [(ngModel)]="kind" placeholder="Add type...">
-    <input type="text" name="amount" [(ngModel)]="amount" placeholder="Add amount...">
+    <input type="number" name="amount" [(ngModel)]="amount" placeholder="Add amount...">
 
     
-    <input type="text" name="time" [(ngModel)]="time" placeholder="Add time...">
-    <input type="submit" value="ADD" class="btn">
+    <input type="date" name="time" [(ngModel)]="time" placeholder="Add time...">
+    <input type="submit" value="ADD" class="button-9">
   </form>
