--- a/ExpenseRecord/ClientApp/src/app/app.component.html
+++ b/ExpenseRecord/ClientApp/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-expense-creation></app-expense-creation>
-<!--<app-expense-display></app-expense-display>-->
+<app-expense-display></app-expense-display>
 
 
