--- a/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
+++ b/ExpenseRecord/ClientApp/src/app/greeting/greeting.component.html
@@ -1,4 +1,6 @@
-<input type="text" [(ngModel)]="name">
-<button (click)="greet()">greet</button>
-<br>
-<label> {{greeting}} </label>
+<div>
+  <h1>Expense Records</h1>
+  <app-response-list></app-response-list>
+  <app-bottom-panel></app-bottom-panel>
+</div>
+
