--- a/ExpenseRecord/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/ExpenseRecord/ClientApp/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,8 @@
             fill-rule="evenodd" />
     </svg>
   </a>
-  <a class="new-task-btn" routerLink="/new-task" routerLinkActive="new-task-svg-active">
-    <svg class="new-task-svg" viewBox="0 0 32 32">
+  <a class="new-record-btn" routerLink="/new-record" routerLinkActive="new-record-svg-active">
+    <svg class="new-record-svg" viewBox="0 0 32 32">
       <g id="plus">
         <line class="cls-1" x1="16" x2="16" y1="7" y2="25" />
         <line class="cls-1" x1="7" x2="25" y1="16" y2="16" />
