--- a/ExpenseRecord/ClientApp/src/app/pages/task-modification/task-modification.component.html
+++ b/ExpenseRecord/ClientApp/src/app/pages/task-modification/task-modification.component.html
@@ -3,5 +3,5 @@
   <button class="blue-button" [disabled]="!isFormCompleted" (click)="sendUpdateTask()" type="submit">Modify this task</button>
   <hr>
   <hr>
-  <button class="blue-button" [disabled]="!isFormCompleted" (click)="delateTask()" type="submit">Delete this task</button>
+  <button class="blue-button" [disabled]="!isFormCompleted" (click)="deleteTask()" type="submit">Delete this task</button>
 </section>
