--- a/ExpenseRecord/ClientApp/src/app/components/task-form/task-form.component.html
+++ b/ExpenseRecord/ClientApp/src/app/components/task-form/task-form.component.html
@@ -12,8 +12,8 @@
 
   <!-- TASK DESCRIPTION -->
   <div>
-    <label for="content">What task do you have to do ? *</label>
-    <textarea class="input-content" id="content" type="text" for="content" name="content" placeholder="Exemple: Faire les courses" required
+    <label for="content">What expense record do you have to do ? *</label>
+    <textarea class="input-content" id="content" type="text" for="content" name="content" placeholder="Example" required
               [ngModel]="currentTask?.description" (ngModelChange)="updateContent($event)"></textarea>
   </div>
 
@@ -21,7 +21,7 @@
   <div class="urgent-container">
     <input class="priority-input" type="checkbox" for="urgent" (click)="changePriority()" [checked]="currentTask?.isUrgent">
     <svg class="feather feather-check" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12" /></svg>
-    <label class="urgent-label" for="urgent">This task is urgent ⚠️</label>
+    <label class="urgent-label" for="urgent">This expense record is urgent ⚠️</label>
   </div>
 
 </form>
