--- a/ExpenseRecord/ClientApp/src/app/pages/task-creation/task-creation.component.html
+++ b/ExpenseRecord/ClientApp/src/app/pages/task-creation/task-creation.component.html
@@ -2,5 +2,5 @@
 <section>
   <app-task-form [currentTask]="currentTask" (updateTask)="updateTask($event)"></app-task-form>
 
-  <button class="blue-button" [disabled]="!isFormCompleted" (click)="validateTask()" type="submit">Validate my task</button>
+  <button class="blue-button" [disabled]="!isFormCompleted" (click)="validateTask()" type="submit">Validate my expense record</button>
 </section>
