--- a/ExpenseRecord/ClientApp/src/app/app.component.html
+++ b/ExpenseRecord/ClientApp/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-greeting></app-greeting>
+
+<html>
+<head>
+  <title>Expense</title>
+</head>
+<body>
+  <div class='container'>
+    <app-expense></app-expense>
+  </div>
+</body>
+</html>
