--- a/ExpenseRecord/ClientApp/src/app/pages/task-modification/task-modification.component.html
+++ b/ExpenseRecord/ClientApp/src/app/pages/task-modification/task-modification.component.html
@@ -1,7 +1,7 @@
 <section>
   <app-task-form [currentTask]="currentTask" (updateTask)="updateTask($event)"></app-task-form>
-  <button class="blue-button" [disabled]="!isFormCompleted" (click)="sendUpdateTask()" type="submit">Modify this task</button>
+  <button class="blue-button" [disabled]="!isFormCompleted" (click)="sendUpdateTask()" type="submit">Modify this expense record</button>
   <hr>
   <hr>
-  <button class="blue-button" [disabled]="!isFormCompleted" (click)="deleteTask()" type="submit">Delete this task</button>
+  <button class="blue-button" [disabled]="!isFormCompleted" (click)="deleteTask()" type="submit">Delete this expense record</button>
 </section>
