--- a/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
@@ -12,7 +12,7 @@
             </thead>
             <tbody class="itemlist" *ngFor='let item of existingRecords'>
                 <tr>
-                    <th>{{item.Description}}</th>
+                    <th>111{{item.Description}}</th>
                     <th>{{item.Type}}</th>
                     <th>{{item.Amount}}</th>
                     <th>{{item.CreateTime}}</th>
