feat(FE): add css for ui

--- a/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.css
+++ b/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.css
@@ -1,3 +1,7 @@
+h2{
+  text-align: center;
+}
+
 .expenseMainPage{
   display: flex;
   flex-direction: row;
@@ -8,20 +12,31 @@
   margin: 10px;
   width: 30%;
 }
-.expenseInput {
+.expenseInputGroup {
   display: flex;
   flex-direction: column;
   row-gap: 15px;
   padding: 10px;
-  width: 80%;
+  width: 90%;
+}
+.expenseInputField {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  justify-content: space-between;
 }
 
 
-.recordDisplay {
+.recordDisplayContainer {
   border: solid 0.5px lightgray;
   border-radius: 10px;
   margin: 10px;
   width:60%;
+  height: 400px;
+  row-gap: 5px;
+}
+.recordDisplay {
+  margin: 10px;
   height: 400px;
   row-gap: 5px;
 }
@@ -39,8 +54,23 @@
 
 .createBtn{
   background: dodgerblue;
+  color: white;
 }
 
 .deleteBtn {
   background: darkred;
+  color: white;
+}
+
+.recordValue{
+  width: 25%;
+  height: 30px;
+  overflow: hidden;
+  display: flex;
+  border-right: 0.1px solid lightgray;
+  justify-content: flex-start;
+  padding: 5px;
+}
+span {
+  color: red;
 }
