--- a/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.html
@@ -1,27 +1,46 @@
 <div class='expenseMainPage'>
   <div class="expenseCreation">
-    <div class="expenseInput">
-      <input type="text" class="expenseDescInput" placeholder="description" [(ngModel)]="description"/>
-      <input type="text" class="expenseDescInput" placeholder="type" [(ngModel)]="type"/>
-      <input type="text" class="expenseDescInput" placeholder="amount" [(ngModel)]="amount"/>
-      <input type="date" class="expenseDescInput" placeholder="date" [(ngModel)]="date"/>
+    <h2>Create Expense Record</h2>
+    <div class="expenseInputGroup">
+      <div class="expenseInputField">
+        <label>Description</label>
+        <input type="text" class="expenseInput" placeholder="description" [(ngModel)]="description"/>
+      </div>
+      <div class="expenseInputField">
+        <label>Type</label>
+        <input type="text" class="expenseInput" placeholder="type" [(ngModel)]="type"/>
+      </div>
+
+      <div class="expenseInputField">
+        <label>Amount</label>
+        <input type="text" class="expenseInput" placeholder="amount" [(ngModel)]="amount"/>
+      </div>
+      <div class="expenseInputField">
+        <label>Date</label>
+        <input type="date" class="expenseInput" placeholder="date" [(ngModel)]="date"/>
+      </div>
+
 
     </div>
     <button mat-raised-button class="createBtn" (click)="create()">Create</button>
+    <span class="warning" *ngIf="showWarning"> Please fill all fields</span>
   </div>
 
-  <div class="recordDisplay">
-    <ng-container *ngIf="!expenseRecordList.length">
-      <h1>No Record</h1>
-    </ng-container>
-    <ng-container *ngFor="let record of expenseRecordList">
-      <div class="recordItem">
-        <div>{{record.description}}</div>
-        <div>{{record.type}}</div>
-        <div>{{record.amount}}</div>
-        <div>{{record.date}}</div>
-        <button class= "deleteBtn" (click)="deleteRecord(record.id)">delete</button>
-      </div>
-    </ng-container>
+  <div class="recordDisplayContainer">
+    <h2>Your Expense Records</h2>
+    <div class="recordDisplay">
+      <ng-container *ngIf="!expenseRecordList.length">
+        <h3>No Record</h3>
+      </ng-container>
+      <ng-container *ngFor="let record of expenseRecordList">
+        <div class="recordItem">
+          <label class="recordValue">{{record.description}}</label>
+          <label class="recordValue">{{record.type}}</label>
+          <label class="recordValue">￥{{record.amount}}</label>
+          <label class="recordValue">{{record.date}}</label>
+          <button class="deleteBtn" (click)="deleteRecord(record.id)">delete</button>
+        </div>
+      </ng-container>
+    </div>
   </div>
 </div>
