feat(FE): add refresh btn

--- a/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.html
@@ -42,5 +42,6 @@
         </div>
       </ng-container>
     </div>
+    <button class = "createBtn" (click)="refresh()"> refresh</button>
   </div>
 </div>
