--- a/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.css
+++ b/ExpenseRecord/ClientApp/src/app/expense-display/expense-display.component.css
@@ -32,13 +32,14 @@ h2{
   border-radius: 10px;
   margin: 10px;
   width:60%;
-  height: 400px;
+  height: 700px;
   row-gap: 5px;
 }
 .recordDisplay {
   margin: 10px;
-  height: 400px;
+  min-height: 600px;
   row-gap: 5px;
+  overflow: auto;
 }
 
 .recordItem {
@@ -55,6 +56,7 @@ h2{
 .createBtn{
   background: dodgerblue;
   color: white;
+  margin: 10px;
 }
 
 .deleteBtn {
