--- a/ExpenseRecord/ClientApp/src/app/app.component.html
+++ b/ExpenseRecord/ClientApp/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-greeting></app-greeting>
+<!-- <app-greeting></app-greeting> -->
+<app-expense></app-expense>
+<!-- <app-expense-list></app-expense-list> -->
