--- a/ExpenseRecord/ClientApp/src/app/app.component.html
+++ b/ExpenseRecord/ClientApp/src/app/app.component.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class='container'>
-    <app-expense></app-expense>
+    <router-outlet></router-outlet>
   </div>
 </body>
 </html>
