--- a/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
@@ -12,10 +12,11 @@
             </thead>
             <tbody class="itemlist" *ngFor='let item of existingRecords'>
                 <tr>
-                    <th>{{item.Description}}</th>
-                    <th>{{item.Type}}</th>
-                    <th>{{item.Amount}}</th>
-                    <th>{{item.CreateTime}}</th>
+                    <input >
+                    <th>{{item.description}}</th>
+                    <th>{{item.type}}</th>
+                    <th>{{item.amount}}</th>
+                    <th>{{item.createTime}}</th>
                 </tr>
             </tbody>
         </table>
