--- a/ExpenseRecord/ClientApp/src/app/expense/child/child.component.css
+++ b/ExpenseRecord/ClientApp/src/app/expense/child/child.component.css
@@ -10,6 +10,10 @@
     border-radius: 5px;
     padding: 20px;
 }
+.input{
+    border: 2px, solid rgba(3, 41, 81, 0.5);
+    font-size: medium;
+}
 .title{
     color: rgba(3, 41, 81, 0.8);
     width: 100%;
