--- a/ExpenseRecord/ClientApp/src/app/expense/child/child.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense/child/child.component.html
@@ -4,21 +4,19 @@
 
     <div class="container">
         <div> 
-        <input style="border: none; font-size: large;" [(ngModel)]='Description' [ngModelOptions]="{standalone: true}"><br>
+        <input class = "input"  [(ngModel)]='Description' [ngModelOptions]="{standalone: true}"><br>
         {{Description}}
         </div>
         <div> 
-            <input style="border: none; font-size: large;" [(ngModel)]='Type' [ngModelOptions]="{standalone: true}"><br>
-            {{Type}}
             <label for="expenseType">Expense Type:</label>
-                <select id="expenseType">
-                <option value="meals">Meals</option>
-                <option value="travel">Travel</option>
-                <option value="accommodation">Accommodation</option>
-                </select>
+            <select id="expenseType" [(ngModel)]="selectedExpenseType">
+            <option value="meals">Meals</option>
+            <option value="travel">Travel</option>
+            <option value="accommodation">Accommodation</option>
+            </select>
         </div>
         <div> 
-            <input style="border: none; font-size: large;" [(ngModel)]='Amount' [ngModelOptions]="{standalone: true}"><br>
+            <input class = "input" [(ngModel)]='Amount' [ngModelOptions]="{standalone: true}"><br>
             {{Amount}}
         </div>
     </div>
