--- a/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
@@ -8,15 +8,16 @@
                     <th>Type</th>
                     <th>Amount</th>
                     <th>CreateTime</th>
+                    <th>Delete?</th>
                 </tr>
             </thead>
             <tbody class="itemlist" *ngFor='let item of existingRecords'>
                 <tr>
-                 
                     <th>{{item.description}}</th>
                     <th>{{item.type}}</th>
                     <th>{{item.amount}}</th>
                     <th>{{item.createTime}}</th>
+                    <th><button (click)="deleteItems()">Delete?</button></th>
                 </tr>
             </tbody>
         </table>
