--- a/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
+++ b/ExpenseRecord/ClientApp/src/app/expense/expense.component.html
@@ -17,7 +17,7 @@
                     <th>{{item.type}}</th>
                     <th>{{item.amount}}</th>
                     <th>{{item.createTime}}</th>
-                    <th><button (click)="deleteItems(item.id)">Delete?</button></th>
+                    <th><button class = "deletebutton" (click)="deleteItems(item.id)">remove</button></th>
                 </tr>
             </tbody>
         </table>
